Fix select2 multi sortable line wrap

--- a/app/assets/stylesheets/forest/partials/_select2_custom.scss
+++ b/app/assets/stylesheets/forest/partials/_select2_custom.scss
@@ -41,6 +41,10 @@
   }
 }
 
+.select2-container .select2-selection--multiple {
+  display: inline-block;
+}
+
 .select2-selection__choice__display {
   img {
     vertical-align: top;
